@@ -18,7 +18,7 @@ public:
     bool visible = false;
     bool hasClients = false; // whether this frame holds clients at the moment
     bool hasParent = false;
-    Rectangle geometry;
+    Rectangle contentGeometry; //! geometry of the frame's content
 };
 
 class FrameDecoration {
