@@ -11,6 +11,8 @@ Current git version
     following new values: 'off', 'hide_all', and 'hide_gaps'. Setting it to
     'hide_gaps' will only hide frame gaps when applicable, 'hide_all' and 'off'
     mirror the old behaviour with regards to 'true' and 'false'.
+  * New frame attribute 'content_geometry'
+  * New monitor attribute 'content_geometry'
 
 Release 0.9.4 on 2022-03-16
 ---------------------------
